# entremets

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  aborted_reads.mets  circular_information_flow.mets  deadlocks.mets  intermediate_reads.mets  lost_update.mets  model.mets  observed_transaction_vanishes.mets  predicate_many_preceders.mets  pyproject.toml  write_cycles.mets
.github/workflows/: publish.yml
docs/: background.rst  conf.py  deadlocks.rst  features.rst  index.rst  requirements.in  requirements.txt  tutorial.rst  unicity.rst
docs/background/: index.rst  roadmap.rst
src/: engine.rs  format.rs  interpreter.rs  main.rs  parser.rs  reporter.rs  scanner.rs  sql_engine.rs  sql_interpreter.rs  state.rs
tests/: integration_tests.rs
tests/integration/: mod.rs
tests/integration/comparisons/: between.mets  comparison.mets  order_by.mets  precedence.mets
tests/integration/count/: count_star.mets  item_not_in_aggregate.expected  item_not_in_aggregate.mets
tests/integration/delete/: delete.mets  delete_with_unicity.mets  (+2 more)
tests/read_committed/: aborted_reads.mets  circular_information_flow.mets  deadlocks.expected  deadlocks.mets  duplicate_creation.mets  intermediate_reads.expected  intermediate_reads.mets  lost_update.expected  lost_update.mets  multiple_columns_update.expected  multiple_columns_update.mets  multiple_unique_contraint.mets  not_lost_update.mets  observed_transaction_vanishes.mets  optimistic_lost_update.mets  predicate_many_preceders.expected  predicate_many_preceders.mets  unique_contraint.mets  write_cycles.mets
(+35 files in other folders)
