[package]
name = "entremets"
description = "The SQL isolation simulator"
documentation = "https://entremets.readthedocs.io/en/latest/"
repository = "https://github.com/sadraskol/entremets/"
license-file = "LICENSE"
version = "0.1.0-alpha.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
